--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
 		<div id="footer">
 			<p>©2014 toutiao.com  京ICP证140141号</p>
 		</div>
+	    <!-- JiaThis Button BEGIN -->
+		<div class="jiathis_style" style="float:right;">
+			<span class="jiathis_txt">分享到：</span>
+			<a class="jiathis_button_tools_1"></a>
+			<a class="jiathis_button_tools_2"></a>
+			<a class="jiathis_button_tools_3"></a>
+			<a class="jiathis_button_tools_4"></a>
+			<a class="jiathis_counter_style"></a>
+		</div>
+		<script type="text/javascript">
+		var jiathis_config = {data_track_clickback:'true'};
+		</script>
+		<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1406447060405130" charset="utf-8"></script>
+		<!-- JiaThis Button END -->
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    <!-- JiaThis Button BEGIN -->
-	<div class="jiathis_style">
-		<span class="jiathis_txt">分享到：</span>
-		<a class="jiathis_button_tools_1"></a>
-		<a class="jiathis_button_tools_2"></a>
-		<a class="jiathis_button_tools_3"></a>
-		<a class="jiathis_button_tools_4"></a>
-		<a class="jiathis_counter_style"></a>
-	</div>
-	<script type="text/javascript">
-	var jiathis_config = {data_track_clickback:'true'};
-	</script>
-	<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1406447060405130" charset="utf-8"></script>
-	<!-- JiaThis Button END -->
 </body>
 </html>
