modify jiathis marginTop

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<p>©2014 toutiao.com  京ICP证140141号</p>
 		</div>
 	    <!-- JiaThis Button BEGIN -->
-		<div class="jiathis_style" style="float:right;">
+		<div class="jiathis_style" style="float:right;margin-top:-32px;">
 			<span class="jiathis_txt">分享到：</span>
 			<a class="jiathis_button_tools_1"></a>
 			<a class="jiathis_button_tools_2"></a>
