add baidu share

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		<div id="footer">
 			<p>©2014 toutiao.com  京ICP证140141号</p>
 		</div>
+
 	    <!-- JiaThis Button BEGIN -->
 		<div class="jiathis_style" style="float:right;margin-top:-32px;">
 			<span class="jiathis_txt">分享到：</span>
@@ -59,6 +60,10 @@
 		</script>
 		<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1406447060405130" charset="utf-8"></script>
 		<!-- JiaThis Button END -->
+
+
+
+		<script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"drzorm","tqq":"drzorm","t163":"drzorm","tsohu":"drzorm"},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"4","bdPos":"left","bdTop":"0"}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
