--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
 		<script type="text/javascript">
 		var jiathis_config = {data_track_clickback:'true'};
 		</script>
-		<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?btn=r4.gif&amp;uid=1406447060405130" charset="utf-8"></script>
+		<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;btn=r4.gif&amp;uid=1406447060405130" charset="utf-8"></script>
 		<!-- JiaThis Button END -->
 
 
 
-		<script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"drzorm","tqq":"drzorm","t163":"drzorm","tsohu":"drzorm"},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"4","bdPos":"left","bdTop":"0"}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
-    </div>
+		<!-- Baidu Button BEGIN -->
+		<script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"drzorm","tqq":"dr"},"bdText":"","bdMini":"1","bdMiniList":["qzone","sqq","weixin","tsina","tqq"],"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"0","bdPos":"left","bdTop":"100"}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+		<!-- Baidu Button END -->
+
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
 </html>
